--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "fem-qr-code-component",
   "version": "1.0.0",
-  "description": "FrontEndMentor QR Code Component Challenge",
+  "description": "![Design preview for the QR code component coding challenge](./design/desktop-preview.jpg)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,7 +10,8 @@
     "type": "git",
     "url": "git+https://github.com/Zharvis/fem-qr-code-component.git"
   },
-  "author": "zharvis",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Zharvis/fem-qr-code-component/issues"
@@ -18,6 +19,16 @@
   "homepage": "https://github.com/Zharvis/fem-qr-code-component#readme",
   "dependencies": {
     "@babel/core": "^7.17.0",
-    "@babel/preset-env": "^7.16.11"
+    "@babel/preset-env": "^7.16.11",
+    "autoprefixer": "^10.4.2",
+    "browser-sync": "^2.27.7",
+    "cssnano": "^5.0.16",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0",
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.1.0",
+    "gulp-terser": "^2.1.0",
+    "postcss": "^8.4.6",
+    "sass": "^1.49.7"
   }
 }
